log/build_2021-06-17_14-52-43/om_aiv_navigation/stderr.log
  File "/home/omron/Omron_LD/install/om_aiv_navigation/lib/python3.8/site-packages/om_aiv_navigation/action_server.py", line 48
    rclpy.spin(action_server)
    ^
SyntaxError: invalid syntax

